--- a/.github/workflows/fontc-on-linux.yaml
+++ b/.github/workflows/fontc-on-linux.yaml
@@ -21,4 +21,4 @@ jobs:
           source-path: test/Font.designspace
           args: "--help"
 
-    #  Comment to trigger test
+    #  Comment to trigger test again
