add branch test

--- a/.github/workflows/fontc-on-linux.yaml
+++ b/.github/workflows/fontc-on-linux.yaml
@@ -20,5 +20,6 @@ jobs:
         with:
           source-path: test/Font.designspace
           args: "--help"
+          branch: go
 
     #  Comment to trigger test again
