test Oswald font build

--- a/.github/workflows/fontc-on-linux.yaml
+++ b/.github/workflows/fontc-on-linux.yaml
@@ -18,6 +18,6 @@ jobs:
       - name: Install fontc and compile fonts
         uses: chrissimpkins/fontc-action@main
         with:
-          source-path: test/Font.designspace
+          source-path: src/Oswald.glyphs
 
     #  Comment to trigger test again
