try Oswald again

--- a/.github/workflows/fontc-on-linux.yaml
+++ b/.github/workflows/fontc-on-linux.yaml
@@ -20,4 +20,4 @@ jobs:
         with:
           source-path: src/Oswald.glyphs
 
-    #  Comment to trigger test
+    #  Comment to trigger test again
